--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "The user management service",
   "main": "index.js",
   "scripts": {
-    "dev":"node src/server.js",
+    "dev": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nabin <ghimiren2057@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^22.13.4",
+    "typescript": "^5.7.3"
+  }
 }
