--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "dev": "node src/server.js",
     "format:fix": "prettier --write .",
     "format:check": "prettier --check .",
+    "lint:fix": "eslint . --fix ",
+    "lint:check": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nabin <ghimiren2057@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@types/node": "^22.13.4",
+    "eslint": "^9.20.1",
     "prettier": "3.5.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.0"
   }
 }
