--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format:check": "prettier --check .",
     "lint:fix": "eslint . --fix ",
     "lint:check": "eslint .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "author": "Nabin <ghimiren2057@gmail.com>",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@eslint/js": "^9.20.0",
     "@types/node": "^22.13.4",
     "eslint": "^9.20.1",
+    "husky": "^9.1.7",
     "prettier": "3.5.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
