--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "@types/node": "^22.13.4",
     "eslint": "^9.20.1",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "3.5.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
-  }
+  },
+  
+    "lint-staged": {
+      "*.ts":["npm run lint:fix","npm run format:fix"]
+    }
+  
 }
