--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The user management service",
   "main": "index.js",
   "scripts": {
-    "dev": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
     "format:fix": "prettier --write .",
     "format:check": "prettier --check .",
     "lint:fix": "eslint . --fix ",
@@ -16,11 +16,14 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.13.4",
     "eslint": "^9.20.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.4.3",
+    "nodemon": "^3.1.9",
     "prettier": "3.5.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.0"
   },
@@ -31,6 +34,7 @@
     ]
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2"
   }
 }
