--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "format:check": "prettier --check .",
         "lint:fix": "eslint . --fix ",
         "lint:check": "eslint .",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest --watch --runInBand",
         "prepare": "husky"
     },
     "author": "Nabin <ghimiren2057@gmail.com>",
@@ -18,13 +18,18 @@
         "@eslint/js": "^9.20.0",
         "@types/express": "^5.0.0",
         "@types/http-errors": "^2.0.4",
+        "@types/jest": "^29.5.14",
         "@types/node": "^22.13.4",
+        "@types/supertest": "^6.0.2",
         "@types/winston": "^2.4.4",
         "eslint": "^9.20.1",
         "husky": "^9.1.7",
+        "jest": "^29.7.0",
         "lint-staged": "^15.4.3",
         "nodemon": "^3.1.9",
         "prettier": "3.5.1",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0"
