--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
         "ts-node": "10.9.1",
-        "typescript": "4.5.2",
+        "typescript": "^5.7.3",
         "typescript-eslint": "^8.24.0"
     },
     "lint-staged": {
@@ -43,6 +43,7 @@
         ]
     },
     "dependencies": {
+        "bcryptjs": "^3.0.2",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "http-errors": "^2.0.0",
