--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "bcryptjs": "^3.0.2",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "express-validator": "^7.2.1",
         "http-errors": "^2.0.0",
         "pg": "^8.4.0",
         "reflect-metadata": "^0.1.13",
