--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "husky": "^9.1.7",
         "jest": "^29.7.0",
         "lint-staged": "^15.4.3",
+        "mock-jwks": "^3.3.4",
         "nodemon": "^3.1.9",
         "prettier": "3.5.1",
         "supertest": "^7.0.0",
@@ -49,9 +50,11 @@
         "cookie-parser": "^1.4.7",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "express-jwt": "^8.5.1",
         "express-validator": "^7.2.1",
         "http-errors": "^2.0.0",
         "jsonwebtoken": "^9.0.2",
+        "jwks-rsa": "^3.1.0",
         "pg": "^8.4.0",
         "reflect-metadata": "^0.1.13",
         "typeorm": "0.3.20",
