--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "test": "jest --watch --runInBand",
         "prepare": "husky",
         "start": "ts-node src/index.ts",
-        "typeorm": "typeorm-ts-node-commonjs"
+        "migration:generate": "typeorm-ts-node-commonjs migration:generate --dataSource=src/config/data-source.ts",
+        "migration:run":"typeorm-ts-node-commonjs migration:run --dataSource=src/config/data-source.ts "
     },
     "author": "Nabin <ghimiren2057@gmail.com>",
     "license": "ISC",
