--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,7 @@ jobs:
 
         steps:
             - uses: actions/checkout@v3
+
             - name: Install dependencies
               run: npm ci
 
@@ -43,35 +44,33 @@ jobs:
 
             - name: SonarCloud scan
               uses: SonarSource/sonarcloud-github-action@master
-
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
     build-and-push-docker:
-    name: Build and push Docker image
-    needs: build-and-test
-    runs-on: ubuntu-latest
+        name: Build and push Docker image
+        needs: build-and-test
+        runs-on: ubuntu-latest
 
-    env:
-        IMAGE_NAME: nabinghimire/mernstack_auth_servce
-        IMAGE_TAG: build-${{ github.run_number }}
+        env:
+            IMAGE_NAME: nabinghimire/mernstack_auth_service
+            IMAGE_TAG: build-${{ github.run_number }}
 
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
-    steps:
-        - name: Checkout repository
-          uses: actions/checkout@v3
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v3
 
-        - name: Login to Docker Hub
-          user: docker/login-action@v1
+            - name: Login to Docker Hub
+              uses: docker/login-action@v1
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-          with:
-              username: ${{ secrets.DOCKERHUB_USERNAME }}
-              password: ${{ secrets.DOCKERHUB_PASSWORD }}
+            - name: Build Docker image
+              run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} -f docker/prod/Dockerfile .
 
-        - name: Build Docker image
-          run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} -f docker/prod/Dockerfile .
-
-        - name: Push Docker image to Docker hub
-          run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+            - name: Push Docker image to Docker hub
+              run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
