--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,76 +1,76 @@
-name: CI
+# name: CI
 
-on:
-    pull_request:
-        branches:
-            - main
+# on:
+#     pull_request:
+#         branches:
+#             - main
 
-    push:
-        branches:
-            - main
+#     push:
+#         branches:
+#             - main
 
-jobs:
-    build-and-test:
-        name: Build the project
+# jobs:
+#     build-and-test:
+#         name: Build the project
 
-        runs-on: ubuntu-latest
+#         runs-on: ubuntu-latest
 
-        #if: github.event_name=='pull_request'
+#         #if: github.event_name=='pull_request'
 
-        steps:
-            - uses: actions/checkout@v3
+#         steps:
+#             - uses: actions/checkout@v3
 
-            - name: Install dependencies
-              run: npm ci
+#             - name: Install dependencies
+#               run: npm ci
 
-            - name: Run eslint
-              run: npm run lint
+#             - name: Run eslint
+#               run: npm run lint
 
-            - name: Test and coverage
-              run: npm run test
+#             - name: Test and coverage
+#               run: npm run test
 
-              env:
-                  DB_HOST: ${{ secrets.TEST_DB_HOST }}
-                  DB_PORT: ${{ secrets.TEST_DB_PORT }}
-                  DB_USERNAME: ${{ secrets.TEST_DB_USERNAME }}
-                  DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
-                  DB_NAME: ${{ secrets.TEST_DB_NAME }}
-                  REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
-                  JWKS_URI: ${{ secrets.JWKS_URI }}
-                  PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+#               env:
+#                   DB_HOST: ${{ secrets.TEST_DB_HOST }}
+#                   DB_PORT: ${{ secrets.TEST_DB_PORT }}
+#                   DB_USERNAME: ${{ secrets.TEST_DB_USERNAME }}
+#                   DB_PASSWORD: ${{ secrets.TEST_DB_PASSWORD }}
+#                   DB_NAME: ${{ secrets.TEST_DB_NAME }}
+#                   REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
+#                   JWKS_URI: ${{ secrets.JWKS_URI }}
+#                   PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
 
-            - name: Build-ts
-              run: npm run build
+#             - name: Build-ts
+#               run: npm run build
 
-            - name: SonarCloud scan
-              uses: SonarSource/sonarcloud-github-action@master
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#             - name: SonarCloud scan
+#               uses: SonarSource/sonarcloud-github-action@master
+#               env:
+#                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    build-and-push-docker:
-        name: Build and push Docker image
-        needs: build-and-test
-        runs-on: ubuntu-latest
+#     build-and-push-docker:
+#         name: Build and push Docker image
+#         needs: build-and-test
+#         runs-on: ubuntu-latest
 
-        env:
-            IMAGE_NAME: nabinghimire/mernstack_auth_service
-            IMAGE_TAG: build-${{ github.run_number }}
+#         env:
+#             IMAGE_NAME: nabinghimire/mernstack_auth_service
+#             IMAGE_TAG: build-${{ github.run_number }}
 
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+#         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v3
+#         steps:
+#             - name: Checkout repository
+#               uses: actions/checkout@v3
 
-            - name: Login to Docker Hub
-              uses: docker/login-action@v1
-              with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_PASSWORD }}
+#             - name: Login to Docker Hub
+#               uses: docker/login-action@v1
+#               with:
+#                   username: ${{ secrets.DOCKERHUB_USERNAME }}
+#                   password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-            - name: Build Docker image
-              run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} -f docker/prod/Dockerfile .
+#             - name: Build Docker image
+#               run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} -f docker/prod/Dockerfile .
 
-            - name: Push Docker image to Docker hub
-              run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+#             - name: Push Docker image to Docker hub
+#               run: docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
