--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
     "main": "index.js",
     "scripts": {
         "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
-        "build":"tsc",
+        "build": "tsc",
         "format:fix": "prettier --write .",
         "format:check": "prettier --check .",
         "lint:fix": "eslint . --fix ",
         "lint": "eslint .",
-        "test":"jest --no-cache --coverage --all --runInBand",
+        "test": "jest --no-cache --coverage --all --runInBand",
         "test:watch": "jest --watch --runInBand",
         "prepare": "husky",
         "start": "ts-node src/index.ts",
         "migration:generate": "typeorm-ts-node-commonjs migration:generate --dataSource=src/config/data-source.ts",
-        "migration:run":"typeorm-ts-node-commonjs migration:run --dataSource=src/config/data-source.ts ",
-        "migration:create":"typeorm-ts-node-commonjs migration:create "
-
+        "migration:run": "typeorm-ts-node-commonjs migration:run --dataSource=src/config/data-source.ts ",
+        "migration:create": "typeorm-ts-node-commonjs migration:create "
     },
     "author": "Nabin <ghimiren2057@gmail.com>",
     "license": "ISC",
     "devDependencies": {
         "@eslint/js": "^9.20.0",
         "@types/cookie-parser": "^1.4.8",
+        "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/http-errors": "^2.0.4",
         "@types/jest": "^29.5.14",
@@ -53,6 +53,7 @@
     "dependencies": {
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-jwt": "^8.5.1",
