--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "The user management service",
     "main": "index.js",
     "scripts": {
-        "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
+        "dev": "cross-env NODE_ENV=production nodemon src/server.ts",
         "build": "tsc",
         "format:fix": "prettier --write .",
         "format:check": "prettier --check .",
@@ -30,6 +30,7 @@
         "@types/jsonwebtoken": "^9.0.9",
         "@types/node": "^16.11.10",
         "@types/supertest": "^6.0.2",
+        "@types/uuid": "^10.0.0",
         "@types/winston": "^2.4.4",
         "eslint": "^9.20.1",
         "husky": "^9.1.7",
@@ -65,6 +66,7 @@
         "reflect-metadata": "^0.1.13",
         "rsa-pem-to-jwk": "^1.1.3",
         "typeorm": "0.3.20",
+        "uuid": "^11.1.0",
         "winston": "^3.17.0"
     }
 }
