--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "The user management service",
     "main": "index.js",
     "scripts": {
-        "dev": "cross-env NODE_ENV=production nodemon src/server.ts",
+        "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
         "build": "tsc",
         "format:fix": "prettier --write .",
         "format:check": "prettier --check .",
